--- a/index.html
+++ b/index.html
@@ -11,41 +11,41 @@
   <body>
     <main>
       <div>
-        <span>a1</span>
-        <span>a2</span>
-        <span>a3</span>
-        <span>a4</span>
-        <span>a5</span>
+        <span data-neighbours="0" class="alive"></span>
+        <span data-neighbours="0" class="alive"></span>
+        <span data-neighbours="0" class="alive"></span>
+        <span data-neighbours="0"></span>
+        <span data-neighbours="0"></span>
       </div>
       <div>
-        <span>b1</span>
-        <span>b2</span>
-        <span>b3</span>
-        <span>b4</span>
-        <span>b5</span>
+        <span data-neighbours="0"></span>
+        <span data-neighbours="0"></span>
+        <span data-neighbours="0"></span>
+        <span data-neighbours="0"></span>
+        <span data-neighbours="0"></span>
       </div>
       <div>
-        <span>c1</span>
-        <span>c2</span>
-        <span>c3</span>
-        <span>c4</span>
-        <span>c5</span>
+        <span data-neighbours="0"></span>
+        <span data-neighbours="0" class="alive"></span>
+        <span data-neighbours="0"></span>
+        <span data-neighbours="0"></span>
+        <span data-neighbours="0"></span>
       </div>
       <div>
-        <span>d1</span>
-        <span>d2</span>
-        <span>d3</span>
-        <span>d4</span>
-        <span>d5</span>
+        <span data-neighbours="0"></span>
+        <span data-neighbours="0"></span>
+        <span data-neighbours="0"></span>
+        <span data-neighbours="0"></span>
+        <span data-neighbours="0"></span>
       </div>
       <div>
-        <span>e1</span>
-        <span>e2</span>
-        <span>e3</span>
-        <span>e4</span>
-        <span>e5</span>
+        <span data-neighbours="0"></span>
+        <span data-neighbours="0"></span>
+        <span data-neighbours="0" class="alive"></span>
+        <span data-neighbours="0" class="alive"></span>
+        <span data-neighbours="0" class="alive"></span>
       </div>
     </main>
-    <script src="js/index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
