feature: added star-stop button, blocked painting cells if stoped

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>Game of Life</title>
   </head>
   <body>
+    <header>
+      <form action="">
+        <label for="start-stop">start-stop</label>
+        <input type="checkbox" id="start-stop" />
+      </form>
+    </header>
     <main>
       <div>
         <span data-neighbours="0" class="alive"></span>
@@ -46,6 +52,6 @@
         <span data-neighbours="0" class="alive"></span>
       </div>
     </main>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="js/index-dos.js"></script>
   </body>
 </html>
