bugfix: fixed functionality on Grid class

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       </form>
     </header>
     <main></main>
-    <script type="module" src="js/index-dos.js"></script>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
