--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <input type="number" id="height" />
         <label for="width">Grid width:</label>
         <input type="number" id="width" />
-        <input type="submit" value="Create" id="submit" />
+        <label for="speed">Speed: </label>
+        <input type="number" id="speed" />
+        <input type="submit" value="Create" id="submit" placeholder="1000" />
       </form>
     </header>
     <main></main>
