--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <header>
       <form id="grid-form" onsubmit="event.preventDefault()">
-        <input type="checkbox" id="start-stop" />
-        <label for="start-stop">start-stop</label>
+        <input type="checkbox" id="startStop" />
+        <label for="startStop">start/stop</label>
         <label for="height">Grid height:</label>
         <input type="number" id="height" />
         <label for="width">Grid width:</label>
